...
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="skip_the_service">SkipTheService</string>
    <string name="no_account_register">No account? Register</string>
    <string name="todo">TODO</string>
    <string name="nothing_here_yet">Nothing Here Yet!</string>

    <string name="Welcome">Welcome to our app!</string>

    <!-- Strings used for service browse page -->
...
    <string name="Category5">Pool Maintenance</string>
    <string name="Category6">Lawn Care</string>
    <string name="Category7">Gardening</string>
    <string name="Category8">Plumbing</string>

    <string name="create_business_account">Create Business Account</string>
    <string name="create_user_account">Create User Account</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register_user_account">Register User Account</string>
    <string name="register">Register</string>

    <string name ="logout">Logout</string>

    <!-- Strings used for account pages -->
    <string name="view_profile">View Profile</string>
    <string name="profile">Profile</string>
    <string name="done">DONE</string>
    <string name="edit">EDIT</string>
    <string name="change_password">Click to Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="enter_new_addr">Enter New Address</string>
    <string name="go_back">BACK</string>
    <string name="view">VIEW</string>
    <string name="email">Email</string>
...
