<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="279dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:contentDescription="@string/todo"
            android:visibility="visible"
            android:src="@drawable/person_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nameContent"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_below="@id/name"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="?android:attr/textColorHint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameContent"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_below="@id/email"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_new_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="?android:attr/textColorHint" />

        <TextView
            android:id="@+id/address"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/newEmail"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/newAddr"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_below="@id/address"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_new_addr"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="?android:attr/textColorHint" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="235dp"
            android:layout_marginLeft="235dp"
            android:layout_marginTop="550dp"
            android:background="@color/design_default_color_error"
            android:onClick="onCLick"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/design_default_color_error" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="550dp"
            android:background="@color/design_default_color_error"
            android:onClick="onCLick"
            android:text="@string/go_back"
            android:textColor="@color/white"
            app:backgroundTint="@color/design_default_color_error" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>